Fixed some violations, added the logic for uploading the file to local directory and save file name in database